Formatação de Texto

--- a/html5.html
+++ b/html5.html
@@ -7,6 +7,6 @@
 </head>
 <body bgcolor="red">
   <p> <EU moro na <address>Rua das Capixabas, 229 - Botafogo</address></p>  
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum, cupiditate veritatis enim optio ipsa rerum debitis. Quod, officiis maxime voluptatibus, laudantium eligendi vero, nihil minus ducimus earum esse quasi voluptatum.</p>
+  <p>Lorfdfem ipsum dolor sit, amet consectetur adipisicing elit. Earum, cupiditate veritatis enim optio ipsa rerum debitis. Quod, officiis maxime voluptatibus, laudantium eligendi vero, nihil minus ducimus earum esse quasi voluptatum.</p>
 </body>
 </html>
